fixing image flickering

--- a/assets/styl/objects/_clients.styl
+++ b/assets/styl/objects/_clients.styl
@@ -12,6 +12,7 @@
   img
     display: block
     height: 60px
+    -webkit-transform: translate3d(0,0,0)
     width: auto
     -webkit-filter: grayscale(100%)
     -moz-filter: grayscale(100%)
